--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -11,6 +11,7 @@
     "emailjs": "^3.8.0",
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
+    "react-animated-cursor": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.1",
